# emgb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GB.h  ae_config.h  config.h  console_debugger.h  cpu.h  cpu_op.h  gb.h  gpu.h  imgui.h  imgui_internal.h  instructions.h  interrupt.h  interupt.h  io.h  joypad.h  joystick_config.h  key_action.h  log.h  memory.h  platform.h  registers.h  rom.h  save.h  special_registers.h  timer.h  utils.h  video_common.h
legacy/: cpu.c.leg
resources/: table_gb  table_gb.html  table_z80
roms/blargg/: build
src/: ae_config.c  background.c  bzip2.c  bzip2.h  cb.c  config.c  console_debugger.c  cpu.c  debug.cpp  gb.c  gpu.c  imgui_demo.cpp  imgui_impl_sdl.cpp  init.c  instructions.c  interrupt.c  interupt.c  io.c  joypad.c  joystick_config.c  key_action.c  ld.h  main.c  memory.c  platform.c  registers.c  rom.c  save.c  seeu.c  special_registers.c  timer.c  utils.c  video_common.c
tools/: base_gen.sh  cb_gen.sh  checkstyle.sh  gen_z80_instructions.sh
tools/joypad_mapping/: joypad_mapping.c
tools/rom_info/: rom_info.c
